force-app/main/default/objects/WhatsApp_Message__c/fields/Contact_Card_JSON__c.field-meta.xml
<CustomField>
    <fullName>Contact_Card_JSON__c</fullName>
    <description>Raw JSON data for shared contact cards</description>
    <label>Contact Card JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>