force-app/main/default/objects/WhatsApp_Message__c/fields/Context_Message__c.field-meta.xml
<CustomField>
    <fullName>Context_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referenced message in reply chain</description>
    <label>Context Message</label>
    <referenceTo>WhatsApp_Message__c</referenceTo>
    <relationshipLabel>Replies</relationshipLabel>
    <relationshipName>Replies</relationshipName>
    <type>Lookup</type>
</CustomField>