force-app/main/default/objects/WhatsApp_Message__c/fields/Context_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Context_Message_ID__c</fullName>
    <description>WhatsApp context message ID for reply threading</description>
    <label>Context Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>