force-app/main/default/objects/WhatsApp_Message__c/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <description>Related WhatsApp Conversation</description>
    <label>Conversation</label>
    <referenceTo>WhatsApp_Conversation__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>WhatsApp_Messages</relationshipName>
    <type>MasterDetail</type>
</CustomField>