force-app/main/default/objects/WhatsApp_Message__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>WhatsApp error code for failed messages</description>
    <label>Error Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>