force-app/main/default/objects/WhatsApp_Message__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>WhatsApp error details for failed messages</description>
    <label>Error Message</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>