force-app/main/default/objects/WhatsApp_Message__c/fields/Interactive_Button_Id__c.field-meta.xml
<CustomField>
    <fullName>Interactive_Button_Id__c</fullName>
    <description>Selected button ID from interactive message</description>
    <label>Interactive Button Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>