force-app/main/default/objects/WhatsApp_Message__c/fields/Interactive_Button_Text__c.field-meta.xml
<CustomField>
    <fullName>Interactive_Button_Text__c</fullName>
    <description>Selected button text from interactive message</description>
    <label>Interactive Button Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>