force-app/main/default/objects/WhatsApp_Message__c/fields/Interactive_Type__c.field-meta.xml
<CustomField>
    <fullName>Interactive_Type__c</fullName>
    <description>Type of interactive message response</description>
    <label>Interactive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Button_Reply</fullName>
            </value>
            <value>
                <fullName>List_Reply</fullName>
            </value>
            <value>
                <fullName>CTA_URL</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>