force-app/main/default/objects/WhatsApp_Message__c/fields/Is_Forwarded__c.field-meta.xml
<CustomField>
    <fullName>Is_Forwarded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this message was forwarded</description>
    <label>Is Forwarded</label>
    <type>Checkbox</type>
</CustomField>