force-app/main/default/objects/WhatsApp_Message__c/fields/Is_From_Agentforce__c.field-meta.xml
<CustomField>
    <fullName>Is_From_Agentforce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether message was generated by Agentforce AI</description>
    <label>Is From Agentforce</label>
    <type>Checkbox</type>
</CustomField>