force-app/main/default/objects/WhatsApp_Message__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>Latitude for location messages</description>
    <label>Latitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>