force-app/main/default/objects/WhatsApp_Message__c/fields/Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Address__c</fullName>
    <description>Address of shared location</description>
    <label>Location Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>