force-app/main/default/objects/WhatsApp_Message__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <description>Name of shared location</description>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>