force-app/main/default/objects/WhatsApp_Message__c/fields/Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Message_ID__c</fullName>
    <description>WhatsApp Message ID (unique identifier from WhatsApp)</description>
    <externalId>true</externalId>
    <label>Message ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>