force-app/main/default/objects/WhatsApp_Message__c/fields/Message_Status__c.field-meta.xml
<CustomField>
    <fullName>Message_Status__c</fullName>
    <description>Delivery status of message</description>
    <label>Message Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>