force-app/main/default/objects/WhatsApp_Message__c/fields/Raw_Payload_JSON__c.field-meta.xml
<CustomField>
    <fullName>Raw_Payload_JSON__c</fullName>
    <description>Raw webhook JSON payload for debugging and audit</description>
    <label>Raw Payload JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>