force-app/main/default/objects/WhatsApp_Message__c/fields/Reaction_Emoji__c.field-meta.xml
<CustomField>
    <fullName>Reaction_Emoji__c</fullName>
    <description>Emoji used in reaction messages</description>
    <label>Reaction Emoji</label>
    <length>10</length>
    <type>Text</type>
</CustomField>