force-app/main/default/objects/WhatsApp_Message__c/fields/Reaction_Target_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Reaction_Target_Message_ID__c</fullName>
    <description>WhatsApp message ID that was reacted to</description>
    <label>Reaction Target Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>