force-app/main/default/objects/WhatsApp_Message__c/fields/Recipient_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Phone__c</fullName>
    <description>Phone number of message recipient</description>
    <label>Recipient Phone</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>