force-app/main/default/objects/WhatsApp_Message__c/fields/Sender_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sender_Phone__c</fullName>
    <description>Phone number of message sender</description>
    <label>Sender Phone</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>