force-app/main/default/objects/WhatsApp_Message__c/fields/Sticker_Animated__c.field-meta.xml
<CustomField>
    <fullName>Sticker_Animated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether sticker is animated</description>
    <label>Sticker Animated</label>
    <type>Checkbox</type>
</CustomField>